# src/main/java/spring/ru/springtest/controllers/CourseController.java
@@ -8,7 +8,12 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import spring.ru.springtest.api.CoursesApi;
-import spring.ru.springtest.dto.*;
+import spring.ru.springtest.dto.create.CourseCreateRequest;
+import spring.ru.springtest.dto.create.StudentCreateRequest;
+import spring.ru.springtest.dto.response.CourseResponse;
+import spring.ru.springtest.dto.response.StudentResponse;
+import spring.ru.springtest.dto.update.CourseUpdateRequest;
+import spring.ru.springtest.dto.response.GetCourses200Response;
 import spring.ru.springtest.services.CourseService;
 
 import java.util.UUID;
@@ -39,7 +44,7 @@ public class CourseController implements CoursesApi {
     }
 
     @Override
-    public ResponseEntity<CourseResponse> createCourse(@Valid CourseRequestCreate requestCreate) {
+    public ResponseEntity<CourseResponse> createCourse(@Valid CourseCreateRequest requestCreate) {
         CourseResponse created = courseService.save(requestCreate);
 
         return ResponseEntity.status(201).body(created);
@@ -48,14 +53,14 @@ public class CourseController implements CoursesApi {
     @Override
     public ResponseEntity<StudentResponse> createStudentForCourse(
             @PathVariable("id") UUID id,
-            @Valid @RequestBody StudentRequestCreate requestCreate) {
+            @Valid @RequestBody StudentCreateRequest requestCreate) {
         StudentResponse created = courseService.createStudent(id, requestCreate);
 
         return ResponseEntity.status(201).body(created);
     }
 
     @Override
-    public ResponseEntity<CourseResponse> updateCourseById(UUID id, @Valid CourseRequestUpdate requestUpdate) {
+    public ResponseEntity<CourseResponse> updateCourseById(UUID id, @Valid CourseUpdateRequest requestUpdate) {
         CourseResponse updated = courseService.update(id, requestUpdate);
 
         return ResponseEntity.ok(updated);
